Added announcements to courses